# fastapi-role-based-access-control-auth-service

./: .coveragerc  .env.sample  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  startup.sh  test.sh
alembic/: env.py
alembic/versions/: 4c225b605985_initial_migration.py
app/: initial_test_data.py  main.py  pre_start.py  tests_pre_start.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/routers/: accounts.py  auth.py  roles.py  user_roles.py  users.py
app/constants/: role.py
app/core/: config.py  security.py
app/crud/: __init__.py  base.py  crud_account.py  crud_role.py  crud_user.py  crud_user_role.py
app/db/: base.py  base_class.py  init_db.py  session.py
app/models/: account.py  role.py  user.py  user_role.py
app/schemas/: __init__.py  account.py  role.py  token.py  user.py  user_role.py
tests/: conftest.py  test_app.py  test_main.py
tests/api/api_v1/: test_accounts.py  test_auth.py  test_user_roles.py  test_users.py
tests/crud/: test_account.py  test_role.py  test_user.py  test_user_role.py
tests/utils/: user.py  utils.py
